--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/micheg/ladies"
+        "url": "https://github.com/micheg/phaser3_parcel2_capacitor_template"
     },
-    "homepage": "kaios.michelangelog.com",
+    "homepage": "michelangelog.com",
     "devDependencies": {
         "parcel": "^2.2.1",
         "parcel-reporter-static-files-copy": "^1.3.4",
@@ -44,8 +44,5 @@
         "es6-promise-plugin": "^4.2.2",
         "mustache": "^4.2.0",
         "phaser": "^3.55.2"
-    },
-    "externals": {
-        "build/**/*": false
     }
 }
